<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainMenuSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mainMenuColor"
        android:orderInCategory="100"
        android:title="@string/menu_color"
        app:showAsAction="never" />
    <item
        android:id="@+id/mainMenuView"
        android:orderInCategory="110"
        android:title="@string/menu_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/mainMenuSync"
        android:orderInCategory="120"
        android:title="@string/menu_sync"
        app:showAsAction="never" />
</menu>
